objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Aliases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aliases</label>
        <referenceTo>Alias__c</referenceTo>
        <relationshipLabel>Related Aliases</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Businesses__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Businesses</label>
        <referenceTo>Businesses__c</referenceTo>
        <relationshipLabel>Related Businesses</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DOBs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOBs</label>
        <referenceTo>DOB__c</referenceTo>
        <relationshipLabel>Related DOBs</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FatherFirstName__c</fullName>
        <label>FatherFirstName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FatherLastName__c</fullName>
        <label>FatherLastName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fathers_Name__c</fullName>
        <label>Father&apos;s Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MotherFirstName__c</fullName>
        <label>MotherFirstName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MotherLastName__c</fullName>
        <label>MotherLastName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mother_s_Name__c</fullName>
        <label>Mother&apos;s Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameAtBirth__c</fullName>
        <label>NameAtBirth</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offenses__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offenses</label>
        <referenceTo>Offence__c</referenceTo>
        <relationshipLabel>Related Offenses</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlaceOfBirth__c</fullName>
        <label>PlaceOfBirth</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Properties__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Related Properties</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PropertyIdentification__c</fullName>
        <label>PropertyIdentification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Properties__c</fullName>
        <label>Related Properties</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Property__c</fullName>
        <label>Related Property</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Criminal Organization</fullName>
                </value>
                <value>
                    <fullName>Criminal Subject/Offender</fullName>
                </value>
                <value>
                    <fullName>Gang Member</fullName>
                </value>
                <value>
                    <fullName>Informant</fullName>
                </value>
                <value>
                    <fullName>Institution</fullName>
                </value>
                <value>
                    <fullName>Non-Criminal Organization</fullName>
                </value>
                <value>
                    <fullName>Non-Criminal Subject</fullName>
                </value>
                <value>
                    <fullName>Officer</fullName>
                </value>
                <value>
                    <fullName>Owner/Owned</fullName>
                </value>
                <value>
                    <fullName>Religious Organization</fullName>
                </value>
                <value>
                    <fullName>Sexual Offender</fullName>
                </value>
                <value>
                    <fullName>Sexual Predator</fullName>
                </value>
                <value>
                    <fullName>Unknown Organization Role</fullName>
                </value>
                <value>
                    <fullName>Unknown Person Role</fullName>
                </value>
                <value>
                    <fullName>Victim</fullName>
                </value>
                <value>
                    <fullName>Witness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>